--- a/visit_contact_javascript/css/arturo.css
+++ b/visit_contact_javascript/css/arturo.css
@@ -1,6 +1,13 @@
+.footer-wrapper {
+
+/*	position:relative;*/
+
+}
+
 .footer-wrapper.bottom {
 
 	background:rgba(0, 0, 0, 1);
+/*	position:relative;*/
 
 }
 
@@ -12,20 +19,22 @@
 	position:absolute;
 	display:block;
 	width:100%;
-	height:300px;
+	height:200px;
 	bottom:80px;
 	background:transparent;
+	opacity:1;
 
-	-webkit-transition: height 0.1s ease-in;
-    -moz-transition: height 0.1s ease-in;
-    -ms-transition: height 0.1s ease-in;
-    -o-transition: height 0.1s ease-in;
-    transition: height 0.1s ease-in;
+	-webkit-transition: all 0.8s ease-in;
+    -moz-transition: all 0.8s ease-in;
+    -ms-transition: all 0.8s ease-in;
+    -o-transition: all 0.8s ease-in;
+    transition: all 0.8s ease-in;
 }
 
 #visit-popup-container.hide {
 
-	height:0;
+/*	height:0;*/
+	opacity:0;
 
 }
 
@@ -43,16 +52,48 @@
 .visit-popup-container--inner .visit-red {
 
 	display:table-cell;
-	width:30%;
+	width:20%;
 	height:100%;
-	background:rgba(210, 0, 46, 0.8);
+	/*background:rgba(210, 0, 46, 0.8);*/
+	background:transparent;
 
+}
+
+.visit-popup-container--inner .visit-red .campus {
+
+	/*display:block;*/
+	display:table;
+	width:100%;
+	min-height:100px;
+	background:rgba(210, 0, 46, 1);
+
+}
+
+.visit-popup-container--inner .visit-red .campus.active {
+
+	background:rgba(210, 0, 46, 0.8);
+	
+}
+
+.visit-popup-container--inner .visit-red .campus .campus-title {
+
+	color:#fff;
+	text-transform:uppercase;
+	display:table-cell;
+	vertical-align:bottom;
+	text-align:right;
+	padding:0 1em 1em 0;
+
+}
+
+.campus-title:hover {
+	cursor:pointer;
 }
 
 .visit-popup-container--inner .visit-black {
 
 	display:table-cell;
-	width:70%;
+	width:80%;
 	height:100%;
 	background:rgba(0, 0, 0, 0.8);
 
